--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,33 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 	</head>
 	<body>
 		<form action="tripoto" method="post">
-			<input type="text" name="inputString" placeholder="String"><br><br>
-			<input type="number" name="threshold" placeholder="Integer value">
-			<input type="radio" name="comparison" value="lt" id="lt"> <label for ="lt" >Less Than
-			<input type="radio" name="comparison" value="eq" id="eq"  checked="checked"> <label for ="eq" >Equal
-			<input type="radio" name="comparison" value="lte" id="lte"> <label for ="lte" >LT or Equal
+			<label for ="string">Enter Input String : </label> 
+			<input type="text" name="inputString" id="string" placeholder="String"><br><br>
+			<label for ="integer">Enter Integer(optional) : </label>
+			<input type="number" name="threshold" id = "integer" placeholder="Integer value"><br><br>
+			<label for ="lt" >Less Than
+			<input type="radio" name="comparison" value="lt" id="lt" > <br>
+			<label for ="eq" >Equal
+			<input type="radio" name="comparison" value="eq" id="eq"  checked="checked"> <br>
+			<label for ="lte" >LT or Equal
+			<input type="radio" name="comparison" value="lte" id="lte"> <br><br>
 			<button type="submit">Submit String</button>
 		</form>
 	</body>
+
+<style>
+label {
+    width:180px;
+    clear:left;
+    text-align:right;
+    padding-right:10px;
+}
+
+input, label {
+    float:left;
+}
+</style>
 </html>
